platform-enterprise_versioned_docs/version-26.1/enterprise/configuration/overview.mdx
---
title: "Configuration"
description: Overview of Seqera configuration options
date created: "2023-04-21"
last updated: "2026-09-14"
tags: [configuration]
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

:::note
Nextflow Tower Enterprise is now Seqera Platform Enterprise. Existing configuration parameters, configuration files, and API endpoints that include _Tower_ currently remain unchanged.
:::

Set Seqera configuration values using environment variables, a `tower.yml` configuration file, or individual values stored in AWS Parameter Store. Sensitive values such as database passwords should be stored securely (e.g., as SecureString type parameters in AWS Parameter Store).

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

    Declare environment variables in a [tower.env](../_templates/docker/tower.env) file. For example:

    ```bash
    TOWER_CONTACT_EMAIL=hello@foo.com
    TOWER_SMTP_HOST=your.smtphost.com
    ```

    See the `Environment variables` option in each section below.

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

    Declare YAML configuration values in a [tower.yml](../_templates/docker/tower.yml) file. For example:

    ```yml
    mail:
        from: "hello@foo.com"
        smtp:
            host: "your.smtphost.com"
    ```

    See the `tower.yml` option in each section below. YAML configuration keys on this page are listed in "dot" notation, i.e., the SMTP host value in the snippet above is represented as `mail.smtp.host` in the tables that follow.

    Don't declare duplicate keys in your `tower.yml` configuration file. Platform will only enforce the last instance of configuration keys that are defined more than once, for example:

    ```yaml
    # This block will not be enforced due to the duplicate `tower` key below
    tower:
        trustedEmails:
            - user@example.com

    # This block will be enforced because it's defined last
    tower:
        auth:
            oidc:
                - "*@foo.com"
    ```

    In a [Helm chart](../platform-helm) deployment, the chart writes the `platform.YAMLConfigFileContent` field of your values file to the `tower.yml` file that Platform reads. Reserve this field for structured values that no environment variable can express, such as the trusted email list or a [custom navigation menu](#custom-navigation-menu):

    ```yaml
    platform:
        YAMLConfigFileContent: |-
            tower:
                trustedEmails:
                    - "*@foo.com"
    ```

    Where the chart exposes a dedicated value for a setting, such as `platform.contactEmail` or `platform.smtp.host`, use that value instead. For other settings that accept an environment variable, use `backend.extraEnvVars` and `cron.extraEnvVars`. These apply per deployment, so set both where the backend and cron pods need the same value.

</TabItem>
<TabItem value="AWS Parameter Store" label="AWS Parameter Store" default>

AWS Parameter Store configuration is only supported for AWS deployments.

Create parameters in the AWS Parameter Store individually, using the format
`/config/<application_name>/<cfg_path> : <cfg_value>`. For example:

```bash
/config/tower-app/mail.smtp.user : <your_username>
/config/tower-app/mail.smtp.password : <your_password>
```

:::caution
The default application name is `tower-app`. To deploy multiple instances from the same Seqera Enterprise account, set a custom application name for each instance with the `micronaut.application.name` value in your `tower.yml` configuration file.
:::

Sensitive values (such as database passwords) should be SecureString type parameters. See [AWS Parameter Store](./aws_parameter_store) for detailed instructions.

</TabItem>
</Tabs>

## Configuration values not supported in tower.yml or AWS Parameter Store

Due to the order of operations when deploying Seqera Enterprise, some configuration values can only be retrieved from **environment variables** (`tower.env`). The following configuration values are not supported for `tower.yml` or AWS Parameter Store configuration and must be set as environment variables:

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/req_env_vars.yml}

</TabItem>
</Tabs>

## Basic configuration

Basic configuration options such as the Seqera instance server URL, application name, and license key.

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/generic_config_env.yml}

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

YAML configuration keys in this table are listed in "dot" notation, i.e., a nested value:

```yaml

...
mail:
  smtp:
    host: "your.smtphost.com"
...
```

is represented as `mail.smtp.host`.

::table{file=configtables/generic_config_yml.yml}

</TabItem>
<TabItem value="AWS Parameter Store" label="AWS Parameter Store" default>

AWS Parameter Store configuration is only supported for AWS deployments.

Replace `{prefix}` in each configuration path with `/config/<application_name>`, where `application_name` is `tower` or your custom application name. See [AWS Parameter Store](./aws_parameter_store).

::table{file=configtables/generic_config_aws.yml}

</TabItem>
</Tabs>

## Seqera and Redis databases

Configuration values that control Seqera's interaction with databases and Redis instances. `TOWER_DB_USER`, `TOWER_DB_PASSWORD`, and `TOWER_DB_URL` must be specified using environment variables during initial Seqera Enterprise deployment in a new environment. A new installation will fail if DB values are only defined in `tower.yml` or the AWS Parameter Store. Once the database has been created, these values can be added to `tower.yml` or [AWS Parameter Store](./aws_parameter_store) entries and removed from your environment variables.

:::note
**Database and cache version requirements:**

From Seqera Enterprise version 26.1:

- MySQL 8.4 (LTS) is the recommended and tested database version. MySQL 5.7 and 8.0 have reached upstream end-of-life and are no longer tested or supported. Migrate to MySQL 8.4 before you upgrade.
- Redis 7.2 and 7.4 are supported, as is Valkey 7.x. Redis 6.x is no longer supported.

For the full support matrices, see [Database changes](../upgrade#database-changes) and [Cache layer changes](../upgrade#cache-layer-changes-redis-eol-and-valkey-support).

Follow your cloud provider specifications to upgrade your instance.
:::

If you use a database **other than** the provided `db` container, you must create a user and database schema manually.

<Tabs>
<TabItem value="MySQL DB schema creation" label="MySQL DB schema creation" default>

```SQL
CREATE DATABASE tower;
ALTER DATABASE tower CHARACTER SET utf8 COLLATE utf8_bin;

CREATE USER 'tower' IDENTIFIED BY <password>;
GRANT ALL PRIVILEGES ON tower.* TO tower@'%' ;
```

</TabItem>
<TabItem value="MariaDB schema creation" label="MariaDB schema creation" default>

```SQL
GRANT SELECT, INSERT, UPDATE, DELETE, CREATE, DROP, REFERENCES, INDEX, ALTER, CREATE TEMPORARY TABLES, LOCK TABLES, EXECUTE, CREATE VIEW, SHOW VIEW, CREATE ROUTINE, ALTER ROUTINE, EVENT, TRIGGER on tower.* TO tower@'%';
```

</TabItem>
</Tabs>

### Managed Redis services

Seqera supports managed Redis services such as [Amazon ElastiCache](https://docs.aws.amazon.com/AmazonElastiCache/latest/red-ug/WhatIs.html), [Azure Managed Redis](https://learn.microsoft.com/azure/redis/overview), or [Google Memorystore](https://cloud.google.com/memorystore/docs/redis).

:::caution
Microsoft is retiring Azure Cache for Redis. As of April 1, 2026, new customers cannot create instances, and from October 1, 2026, no new instances can be created. For new Azure deployments, use [Azure Managed Redis](https://learn.microsoft.com/azure/redis/overview).
:::

When using a managed Redis service, you must specify the service IP address or DNS name for the `TOWER_REDIS_URL` as described in the following sections.

<Tabs>
<TabItem value="AWS ElastiCache" label="AWS ElastiCache" default>

- Use a single-node cluster, as multi-node clusters are not supported
- Use an instance with at least 6 GB capacity ([cache.m4.large](https://docs.aws.amazon.com/AmazonElastiCache/latest/red-ug/CacheNodes.SupportedTypes.html) or greater)
- Specify your private ElastiCache instance in the Seqera environment variables:

```bash
TOWER_REDIS_URL=redis://<redis private IP>:6379
```

</TabItem>
<TabItem value="Azure Managed Redis" label="Azure Managed Redis" default>

- Use a single-node cluster, as multi-node clusters are not supported
- Choose a production-capable [Azure Managed Redis tier](https://learn.microsoft.com/azure/redis/overview) appropriate for your workload
- Specify your private Azure Managed Redis instance in the Seqera environment variables:

```bash
TOWER_REDIS_URL=redis://<redis private IP>:6379
```

</TabItem>
<TabItem value="Google Memorystore" label="Google Memorystore" default>

- Use a single-node cluster, as multi-node clusters are not supported
- Use an instance with at least 6 GB capacity ([M2](https://cloud.google.com/memorystore/docs/redis/pricing#instance_pricing) or greater)
- Specify your private Memorystore instance in the Seqera environment variables:

```bash
TOWER_REDIS_URL=redis://<redis private IP>:6379
```

</TabItem>
<TabItem value="Self-hosted Redis" label="Self-hosted Redis" default>

If you run the Redis service as a container in your Docker or Kubernetes installation, specify the service name as part of the `TOWER_REDIS_URL`:

```bash
TOWER_REDIS_URL=redis://redis:6379
```

</TabItem>
</Tabs>

### Database and Redis manual configuration

If the DB username and password variables are left empty when using [Docker Compose](../platform-docker-compose), default `tower` database values are applied automatically. With [Kubernetes](../platform-kubernetes) and custom DB deployments, `tower` values are not pre-filled.

:::note
We recommend using managed cloud database services for production deployments.
:::

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/db_env.yml}

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

`TOWER_DB_USER`, `TOWER_DB_PASSWORD`, and `TOWER_DB_URL` must be specified using **environment variables** during initial Seqera Enterprise deployment in a new environment.

YAML configuration keys in this table are listed in "dot" notation, i.e., a nested value:

```yaml

...
mail:
  smtp:
    host: "your.smtphost.com"
...
```

is represented as `mail.smtp.host`.

::table{file=configtables/db_yml.yml}

</TabItem>
<TabItem value="AWS Parameter Store" label="AWS Parameter Store" default>

AWS Parameter Store configuration is only supported for AWS deployments.

`TOWER_DB_USER`, `TOWER_DB_PASSWORD`, and `TOWER_DB_URL` must be specified using **environment variables** during initial Seqera Enterprise deployment in a new environment.

Replace `{prefix}` in each configuration path with `/config/<application_name>`, where `application_name` is `tower` or your custom application name. See [AWS Parameter Store](./aws_parameter_store).

::table{file=configtables/db_aws.yml}

</TabItem>
</Tabs>

## Opt-in Seqera features

Configuration values that enable opt-in Seqera features per instance or workspace.

### Core features

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/features_env.yml}

</TabItem>
</Tabs>

### Data features

Configuration values used by Seqera for Datasets, Data Explorer, Data Lineage, and Studios.

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/data_features_env.yml}

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

::table{file=configtables/data_features_yml.yml}

</TabItem>
</Tabs>

## Cryptographic options

Configuration values used by Seqera to encrypt your data.

:::caution
Do not modify your crypto secret key between starts. Changing this value will prevent the decryption of existing data.
:::

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/crypto_env.yml}

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

YAML configuration keys in this table are listed in "dot" notation, i.e., a nested value:

```yaml

...
mail:
  smtp:
    host: "your.smtphost.com"
...
```

is represented as `mail.smtp.host`.

::table{file=configtables/crypto_yml.yml}

</TabItem>
<TabItem value="AWS Parameter Store" label="AWS Parameter Store" default>

AWS Parameter Store configuration is only supported for AWS deployments.

Replace `{prefix}` in each configuration path with `/config/<application_name>`, where `application_name` is `tower` or your custom application name. See [AWS Parameter Store](./aws_parameter_store).

::table{file=configtables/crypto_aws.yml}

</TabItem>
</Tabs>

### Secret key rotation

Rotate the key used to encrypt the credentials and secrets stored in your Platform database. Encryption key rotation is a security best practice and should be performed at an interval specified by your organization's security requirements, or in the event of a suspected compromise of your secret key.

Enable rotation by setting the following configuration values:

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

- `TOWER_SECRET_ROTATION_ENABLED=true`
- `TOWER_SECRET_ROTATION_PREVIOUS_KEY=<EXISTING_TOWER_CRYPTO_SECRET_KEY_VALUE>`
- `TOWER_CRYPTO_SECRETKEY=<NEW_SECRET_KEY_VALUE>`

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

- `tower.secret.rotation.enabled: true`
- `tower.secret.rotation.previous-key: <EXISTING_tower.crypto.secretKey_VALUE>`
- `tower.crypto.secretKey: <NEW_SECRET_KEY_VALUE>`

</TabItem>
<TabItem value="AWS Parameter Store" label="AWS Parameter Store" default>

- `/tower/secret-rotation/enabled: true`
- `/tower/secret-rotation/previous-key: <EXISTING_/tower/crypto/secretKey_VALUE>`
- `/tower/crypto/secretKey: <NEW_SECRET_KEY_VALUE>`

</TabItem>
</Tabs>

With rotation enabled and the previous and new key values set, secret key rotation will run as part of the Platform cron service during application startup. Normal application startup is not affected by this process, and Platform is fully operational while the credentials and secrets in your database are being encrypted using your new secret key.

:::warning

- To prevent data loss, perform a backup of your Platform database and securely back up your current crypto secret key before enabling and performing key rotation.
- All backend pods or containers for your Enterprise deployment must contain the same previous and new secret key values in their Platform config and must be in a ready/running state before starting the Platform cron service.
  :::

The [Admin panel](../../administration/overview.md#encryption) **Encryption** tab displays the status of completed or errored encryption tasks.

## Backend memory requirements

The Platform backend and cron services run on the Java Virtual Machine (JVM). Allocate at least 4 GB of memory to each service for stable operation under load.

For Kubernetes, set resource limits in your pod specifications:

```yaml
resources:
  limits:
    memory: "4Gi"
  requests:
    memory: "4Gi"
```

For Docker Compose, set memory limits in your service definitions:

```yaml
services:
  backend:
    mem_limit: 4g
    memswap_limit: 4g
```

:::note
These default memory allocation limits are included in the Kubernetes manifest templates ([tower-svc.yml](../_templates/k8s/tower-svc.yml) and [tower-cron.yml](../_templates/k8s/tower-cron.yml)). For Docker Compose, add the `mem_limit` settings to your service definitions as shown above.
:::

### JVM memory tuning

For production deployments, configure JVM memory parameters with the `JAVA_OPTS` environment variable. This baseline configuration suits most deployments:

```bash
JAVA_OPTS="-Xms1000M -Xmx2000M -XX:MaxDirectMemorySize=800m -Dio.netty.maxDirectMemory=0 -Djdk.nio.maxCachedBufferSize=262144"
```

The `JAVA_TOOL_OPTIONS` environment variable is a supported alternative to `JAVA_OPTS`. The JVM reads it directly at startup and confirms pickup with a `Picked up JAVA_TOOL_OPTIONS` line in the service logs. Set one variable or the other, not both. Options passed on the command line (which is how `JAVA_OPTS` is applied) take precedence over `JAVA_TOOL_OPTIONS` when the same flag appears in both.

:::note
These default JVM memory settings are included in the configuration templates provided in these docs:
- Kubernetes: [tower-svc.yml](../_templates/k8s/tower-svc.yml) and [tower-cron.yml](../_templates/k8s/tower-cron.yml)
- Docker Compose: [tower.env](../_templates/docker/tower.env)
:::

| Parameter | Description |
| --- | --- |
| `-Xms` / `-Xmx` | Initial and maximum heap size — the memory pool for Java objects. |
| `-XX:MaxDirectMemorySize` | Off-heap memory for NIO operations, network buffers, and file I/O. Handles concurrent workflow API operations. |
| `-Dio.netty.maxDirectMemory=0` | Disables Netty's internal memory tracking and relies on the JVM direct memory limit instead. |
| `-Djdk.nio.maxCachedBufferSize` | Limits the size of cached NIO buffers to prevent excessive memory retention. |

Adjust these baseline values based on the symptoms you observe.

Increase `-XX:MaxDirectMemorySize` if you observe:
- `OutOfMemoryError: Direct buffer memory` in the logs
- High concurrent workflow launch rates (more than 100 simultaneous workflows)
- Large configuration payloads or heavy API usage

Increase heap memory (`-Xmx`) if you observe:
- `OutOfMemoryError: Java heap space` in the logs
- Garbage collection pauses that affect performance
- Growing memory usage under sustained load

For deployments running 200 or more concurrent workflows, increase the heap and direct memory limits:

```bash
JAVA_OPTS="-Xms1000M -Xmx3000M -XX:MaxDirectMemorySize=1600m -Dio.netty.maxDirectMemory=0 -Djdk.nio.maxCachedBufferSize=262144"
```

Set the container or pod memory limit higher than the JVM limits to accommodate non-heap memory usage.

:::warning
These are starting values. Monitor your deployment's memory usage and adjust for your workload. Undersized memory allocation can cause out-of-memory (OOM) failures and service instability.
:::

## Compute environments

Configuration values to enable computing platforms and customize Batch Forge resource naming.

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/compute_env.yml}

</TabItem>
</Tabs>

### Available platform values

`TOWER_ENABLE_PLATFORMS` (`tower_enable_platforms` in the Terraform installer) controls which compute environment types are available in your installation. A platform must be listed here before a compute environment of that type can be created — if a compute environment type does not appear in the Platform UI, the corresponding value is missing from this variable.

| Platform value | Compute environment type |
| :------------- | :----------------------- |
| `awsbatch-platform` | [AWS Batch](../../compute-envs/aws-batch) |
| `awscloud-platform` | [AWS Cloud](../../compute-envs/aws-cloud) |
| `azbatch-platform` | [Azure Batch](../../compute-envs/azure-batch) |
| `azcloud-platform` | [Azure Cloud](../../compute-envs/azure-cloud) |
| `googlebatch-platform` | [Google Cloud Batch](../../compute-envs/google-cloud-batch) |
| `googlecloud-platform` | [Google Cloud](../../compute-envs/google-cloud) |
| `eks-platform` | [Amazon EKS](../../compute-envs/eks) |
| `gke-platform` | [Google Kubernetes Engine](../../compute-envs/gke) |
| `k8s-platform` | [Kubernetes](../../compute-envs/k8s) |
| `slurm-platform` | [Slurm](../../compute-envs/hpc) |
| `lsf-platform` | [IBM Spectrum LSF](../../compute-envs/hpc) |
| `uge-platform` | [Grid Engine](../../compute-envs/hpc) |
| `altair-platform` | [Altair PBS Pro](../../compute-envs/hpc) |
| `moab-platform` | [Moab](../../compute-envs/hpc) |
| `local-platform` | Local (evaluation and development only) |

Specify values as a comma-separated list with no spaces:

```bash
TOWER_ENABLE_PLATFORMS=awsbatch-platform,azcloud-platform,k8s-platform
```

:::note
Azure Batch and Azure Cloud are separate compute environment types with separate platform values. Enabling `azbatch-platform` does not make Azure Cloud compute environments available, and vice versa.
:::

### Compute environment cleanup

A scheduled cron job can transition compute environments that are stuck in `CREATING` or `DELETING` states into terminal states (`ERRORED` or `INVALID`). The cleanup job is disabled by default.

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/compute_env_cleanup_env.yml}

</TabItem>
</Tabs>

## Git integration

Seqera Platform has built-in support for public and private Git repositories. Create [Git provider credentials](../../git/overview) to allow Seqera to interact with the following services:

- [GitHub](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token)
- [BitBucket](https://confluence.atlassian.com/bitbucketserver/personal-access-tokens-939515499.html)
- [GitLab](https://gitlab.com/profile/personal_access_tokens)
- [Gitea](https://docs.gitea.io/en-us/development/api-usage/#generating-and-listing-api-tokens)
- [Azure Repos](https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/use-personal-access-tokens-to-authenticate)

:::caution
Credentials configured in your SCM providers list override Git credentials in your (organization or personal) workspace.
:::

Public Git repositories can be accessed without authentication, but are often subject to [throttling](https://docs.github.com/en/rest/overview/resources-in-the-rest-api?apiVersion=2022-11-28#rate-limits-for-requests-from-personal-accounts). We recommend always adding Git credentials to your Seqera workspace, regardless of the repository type you use.

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

Credentials and other secrets must not be hard-coded in environment variables in production environments. Credentials added using the application UI are SHA256-encrypted before secure storage and not exposed by any Seqera API.

::table{file=configtables/git_env.yml}

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

Credentials and other secrets must not be stored in plain text in production environments. Credentials added using the application UI are SHA256-encrypted before secure storage and not exposed by any Seqera API.

YAML configuration keys in this table are listed in "dot" notation, i.e., a nested value:

```yaml

...
mail:
  smtp:
    host: "your.smtphost.com"
...
```

is represented as `mail.smtp.host`.

::table{file=configtables/git_yml.yml}

</TabItem>
<TabItem value="AWS Parameter Store" label="AWS Parameter Store" default>

AWS Parameter Store configuration is only supported for AWS deployments.

Replace `{prefix}` in each configuration path with `/config/<application_name>`, where `application_name` is `tower` or your custom application name. See [AWS Parameter Store](./aws_parameter_store).

::table{file=configtables/git_aws.yml}

</TabItem>
</Tabs>

### Local repositories

Seqera Enterprise can connect to workflows stored in local Git repositories. To do so, volume mount your local repository folder in your Seqera backend container. Then, update your `tower.yml`:

```yml
tower:
  pipeline:
    allow-local-repos:
      - /path/to/repo
```

## Mail server

Configure values for SMTP email service integration. Production SMTP hosts must use a TLS-protected connection. See [SSL/TLS](../configuration/ssl_tls).

AWS deployments also support [Amazon Simple Email Service (SES)](https://aws.amazon.com/ses/).

### SMTP service integration

To use an SMTP gateway for mail service, set SMTP user and password values to `null`.

:::caution
Your organization's email security policy may prevent the `TOWER_CONTACT_EMAIL` address from receiving Seqera emails. If this occurs after successful SMTP configuration, you may need to configure `spf`, `dkim`, and `dmarc` records for your domain. Contact your IT support staff for further assistance.
:::

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/mail_server_env.yml}

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

YAML configuration keys in this table are listed in "dot" notation, i.e., a nested value:

```yaml

...
mail:
  smtp:
    host: "your.smtphost.com"
...
```

is represented as `mail.smtp.host`.

::table{file=configtables/mail_server_yml.yml}

</TabItem>
<TabItem value="AWS Parameter Store" label="AWS Parameter Store" default>

AWS Parameter Store configuration is only supported for AWS deployments.

Replace `{prefix}` in each configuration path with `/config/<application_name>`, where `application_name` is `tower` or your custom application name. See [AWS Parameter Store](./aws_parameter_store).

::table{file=configtables/mail_server_aws.yml}

</TabItem>
</Tabs>

### AWS SES integration

In AWS deployments, you can use AWS Simple Email Service (SES) instead of traditional SMTP for sending Seqera platform emails.

:::note
Simple Email Service (SES) is only supported in Seqera deployments on AWS.
:::

To configure AWS SES as your Seqera email service:

1. Set `TOWER_ENABLE_AWS_SES=true` in your environment variables.
2. Specify the email address used to send Seqera emails with one of the following:
   - the `TOWER_CONTACT_EMAIL` environment variable
   - a `mail.from` entry in `tower.yml`
   - a `/config/<application_name>/mail/from` AWS Parameter Store entry
3. The [AWS SES service](https://docs.aws.amazon.com/ses/index.html) must run in the same region as your Seqera instance.
4. The [Seqera IAM role](../../compute-envs/aws-batch#iam-user-creation) must include the `ses:SendRawEmail` permission.

## Nextflow launch container

:::caution
Do not replace the [Seqera-provided default image](../../functionality_matrix/overview) unless absolutely necessary.
:::

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

| Environment Variable     | Description                                                                                                                                                    | Value                                                 |
| ------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------- |
| `TOWER_LAUNCH_CONTAINER` | The container image to run the Nextflow execution. This setting overrides the launch container selection for all organizations and workspaces in your account. | Example: `quay.io/seqeralabs/nf-launcher:j17-23.04.3` |

</TabItem>
</Tabs>

## Seqera API

Enable the API endpoints to host the Seqera Enterprise OpenAPI specification and use the [tw CLI](https://github.com/seqeralabs/tower-cli). Set custom API rate limits and timeouts.

:::note
To configure API rate limit environment variables, you must add `ratelim` to the `MICRONAUT_ENVIRONMENTS`. Without `ratelim` being set, the rate limit configuration variables below are ignored.
:::

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

| Environment variable      | Description                                                                                                                        | Value            |
| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------- | ---------------- |
| `TOWER_ENABLE_OPENAPI`    | Enable the OpenAPI documentation endpoint, e.g., [cloud.seqera.io/openapi/index.html](https://cloud.seqera.io/openapi/index.html). | Default: `false` |
| `TOWER_RATELIMIT_PERIOD`  | Specify the maximum number of HTTP requests that can be made during the `TOWER_RATELIMIT_REFRESH` period.                          | Default: `20`    |
| `TOWER_RATELIMIT_REFRESH` | API rate limit refresh period.                                                                                                     | Default: `1s`    |
| `TOWER_RATELIMIT_TIMEOUT` | The waiting period before rejecting requests over the `TOWER_RATELIMIT_PERIOD` limit during the refresh period.                    | Default: `500ms` |

</TabItem>
</Tabs>

## Custom navigation menu

Modify your Seqera instance's navigation menu options.

<Tabs>
<TabItem value="tower.yml" label="tower.yml" default>

```yaml
tower:
  navbar:
    menus:
      - label: "My Community"
        url: "https://host.com/foo"
      - label: "My Pipelines"
        url: "https://other.com/bar"
```

</TabItem>
<TabItem value="Helm chart" label="Helm chart">

In a [Helm chart](../platform-helm) deployment, set the menu options in the `platform.YAMLConfigFileContent` field of your values file:

```yaml
platform:
  YAMLConfigFileContent: |-
    tower:
      navbar:
        menus:
          - label: "My Community"
            url: "https://host.com/foo"
          - label: "My Pipelines"
            url: "https://other.com/bar"
```

</TabItem>
</Tabs>

## Logging

Logging-related configuration values to aid troubleshooting. See [Audit logs](../../monitoring/audit-logs) for more information on application event logging. In 26.1, use `TOWER_AUDIT_LOG_V2_WRITE_MODE` to control whether audit events are written to the v2 schema, or to both the legacy and the v2 schema. Use `TOWER_CRON_AUDIT_LOG_CLEAN_UP_ENABLED` to disable automatic audit log deletion, and restart Platform after changing audit log settings.

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/tower_logging.yml}

</TabItem>
<TabItem value="tower.yml" label="tower.yml" default>

Set the logging detail level for various Seqera services. Logs for particular services may be requested by support to assist with troubleshooting an issue. Set the logging configuration parameter in your Seqera YAML configuration before attempting to reproduce your issue. The example below sets the detail level for application and database logging:

`logger` is a root-level object in the `tower.yml` configuration file, i.e., it is not nested under `tower`.

```yaml
logger:
  levels:
    org.hibernate.SQL: DEBUG
    org.hibernate.type: TRACE
    io.seqera.tower: TRACE
```

</TabItem>
</Tabs>

### Audit log v2

Configuration values for the v2 audit log subsystem and the audit log cleanup cron job. The v2 audit log adds support for pre/post change state capture and CSV export limits, and runs alongside the existing v1 table when `TOWER_AUDIT_LOG_V2_WRITE_MODE` is set to `dual`.

<Tabs>
<TabItem value="Environment variables" label="Environment variables" default>

::table{file=configtables/audit_log_v2_env.yml}

</TabItem>
</Tabs>
